다중 author 지원을 위한 세팅 중

--- a/themes/tranquilpeak/layout/_partial/post/header.ejs
+++ b/themes/tranquilpeak/layout/_partial/post/header.ejs
@@ -13,4 +13,7 @@
     <% if (post.meta === undefined || post.meta) { %>
         <%- partial('meta',{classes: ['post-meta']}) %>
     <% } %>
+    <% if (post.authorId) { %>
+        <h1>author: </h1>
+    <% } %>
 </div>
