다중 author 기능 구현 완료 // TODO: author 폰트 변경 필요

--- a/themes/tranquilpeak/layout/_partial/post/header.ejs
+++ b/themes/tranquilpeak/layout/_partial/post/header.ejs
@@ -14,6 +14,6 @@
         <%- partial('meta',{classes: ['post-meta']}) %>
     <% } %>
     <% if (post.authorId) { %>
-        <h1>author: </h1>
+        <h1>author: <%= post.authorId %> </h1>
     <% } %>
 </div>
